[package]
name = "reth-stale-direct-db"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
# reth (using cakevm fork with subscribe-persisted-block feature)
reth-ethereum = { git = "https://github.com/cakevm/reth", branch = "subscribe-persisted-block", features = ["node"] }
reth-provider = { git = "https://github.com/cakevm/reth", branch = "subscribe-persisted-block" }

# alloy
alloy-eips = "1.1"
alloy-primitives = "1.1"
alloy-provider = { version = "1.1", features = ["ws", "pubsub"] }
alloy-rpc-types-eth = "1.1"

# async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# CLI & Error handling
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
thiserror = "2"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
